2005-10-14  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/interfaces.py:
	* kiwi/proxies.py:
	* kiwi/ui/widgets/combobox.py:
	* kiwi/ui/widgets/entry.py:
	* kiwi/ui/widgets/proxy.py:
	* kiwi/ui/widgets/spinbutton.py:
	Do validation in read, simplifies the interaction between the proxy 
	and the widgets.
	Add some basic documentation to the proxy/validation "interfaces".

2005-10-13  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/proxies.py:
	* kiwi/ui/widgets/checkbutton.py:
	* kiwi/ui/widgets/combobox.py:
	* kiwi/ui/widgets/entry.py:
	* kiwi/ui/widgets/label.py:
	* kiwi/ui/widgets/proxy.py:
	* kiwi/ui/widgets/radiobutton.py:
	* kiwi/ui/widgets/spinbutton.py:
	* kiwi/ui/widgets/textview.py:
	Kill WidgetMixin.update, move the check it did to the proxy itself.

2005-10-13  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/entry.py (Entry.do_unrealize): 
	* kiwi/ui/widgets/spinbutton.py (SpinButton.do_unrealize): 
	Chain to parents realize so the parent gets a chance to
	free the relevent resources.

2005-10-11  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/combobox.py:
	* kiwi/ui/widgets/entry.py:
	* kiwi/ui/widgets/list.py:
	* kiwi/ui/widgets/proxy.py:
	* kiwi/ui/widgets/spinbutton.py:
	* kiwi/ui/widgets/textview.py:
	Redo validation. Fixes #2123

2005-10-10  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/list.py (ColoredColumn): New column.
	(Column): Add two new hooks, renderer_func & on_attach_renderer

2005-10-09  Johan Dahlin  <johan@gnome.org>

	* kiwi/__init__.py:
	* kiwi/dist.py:
	* kiwi/environ.py:
	* kiwi/ui/wizard.py:
	* setup.py:

	Add infrastructure for handling installed/uninstalled mode.
	Introduces Library and Application instances in kiwi.environ.
	Add distutils helpers. Use environ.Library in for kiwi itself (yay
	dogfooding). Remove old hack in wizard.
	
2005-10-08  Johan Dahlin  <johan@gnome.org>

	* kiwi/argcheck.py (argcheck.__call__): 
	Check so the number of arguments are equal before checking 