@@ -22,7 +22,12 @@
 #            Johan Dahlin <jdahlin@async.com.br>
 #
 
+import gobject
 import gtk
+from gtk import gdk
+
+from kiwi.decorators import delayed
+from kiwi.utils import gsignal
 
 def gdk_color_to_string(color):
     """Convert a color to a #AABBCC string"""
@@ -38,7 +43,7 @@ def set_foreground(widget, color, state=gtk.STATE_NORMAL):
       - color: a hexadecimal code or a well known color name
       - state: the state we are afecting, see gtk.STATE_*
     """
-    widget.modify_fg(state, gtk.gdk.color_parse(color))
+    widget.modify_fg(state, gdk.color_parse(color))
 
 def get_foreground(widget, state=gtk.STATE_NORMAL):
     """Return the foreground color of the widget as a string"""    
@@ -55,9 +60,9 @@ def set_background(widget, color, state=gtk.STATE_NORMAL):
       - state: the state we are afecting, see gtk.STATE_*
     """
     if isinstance(widget, gtk.Entry):
-        widget.modify_base(state, gtk.gdk.color_parse(color))
+        widget.modify_base(state, gdk.color_parse(color))
     else:
-        widget.modify_bg(state, gtk.gdk.color_parse(color))
+        widget.modify_bg(state, gdk.color_parse(color))
 
 def get_background(widget, state=gtk.STATE_NORMAL):
     """Return the background color of the widget as a string"""
@@ -72,3 +77,69 @@ def quit_if_last(*args):
     if len(windows) == 1:
         gtk.main_quit()
 
+
+class FadeOut(gobject.GObject):
+    """I am a helper class to draw the fading effect of the background
+    Call my methods start() and stop() to control the fading.
+    """
+    gsignal('done')
+    gsignal('color-changed', gdk.Color)
+
+    # How long time it'll take before we start (in ms)
+    COMPLAIN_DELAY = 500
+
+    MERGE_COLORS_DELAY = 100
+
+    # XXX: Fetch the default value from the widget instead of hard coding it.
+    GOOD_COLOR = "white"
+    ERROR_COLOR = "#ffd5d5"
+
+    def __init__(self, widget):
+        gobject.GObject.__init__(self)
+        self._widget = widget
+        self._background_timeout_id = -1
+        
+    def _merge_colors(self, src_color, dst_color, steps=10):
+        """
+        Change the background of widget from src_color to dst_color
+        in the number of steps specified
+        """
+        gdk_src = gdk.color_parse(src_color)
+        gdk_dst = gdk.color_parse(dst_color)
+        rs, gs, bs = gdk_src.red, gdk_src.green, gdk_src.blue
+        rd, gd, bd = gdk_dst.red, gdk_dst.green, gdk_dst.blue
+        rinc = (rd - rs) / float(steps)
+        ginc = (gd - gs) / float(steps)
+        binc = (bd - bs) / float(steps)
+        for dummy in xrange(steps):
+            rs += rinc
+            gs += ginc
+            bs += binc
+            col = gdk.color_parse("#%02X%02X%02X" % (int(rs) >> 8,
+                                                     int(gs) >> 8,
+                                                     int(bs) >> 8))
+            self.emit('color-changed', col)
+            yield True
+
+        self.emit('done')
+        yield False
+
+    # FIXME: When we can depend on 2.4
+    #@delayed(COMPLAIN_DELAY)
+    def start(self):
+        # If we changed during the delay
+        if self._background_timeout_id != -1:
+            return 
+        func = self._merge_colors(FadeOut.GOOD_COLOR,
+                                  FadeOut.ERROR_COLOR).next
+        self._background_timeout_id = (
+            gobject.timeout_add(FadeOut.MERGE_COLORS_DELAY, func))
+    start = delayed(COMPLAIN_DELAY)(start)
+    
+    def stop(self):
+        if self._background_timeout_id != -1:
+            gobject.source_remove(self._background_timeout_id)
+            self._background_timeout_id = -1
+        self._widget.update_background(gdk.color_parse(FadeOut.GOOD_COLOR))
+        
+gobject.type_register(FadeOut)
